Solves an issue where images in tables would be too wide

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -61,6 +61,9 @@
 
   img {
     max-width: 100%;
+    table & {
+      width: 100%;
+    }
   }
 }
 
